# ssa

./: .gitignore  Cargo.toml
ssa/: Cargo.toml
ssa/fuzz/: Cargo.toml
ssa/fuzz/fuzz_targets/: parse-no-panic.rs
ssa/src/: aliases.rs  ast.rs  ast_validation.rs  file_ast.rs  graph.rs  lib.rs  main.rs  mir.rs  mir_opts.rs  parser.rs  pool.rs  ssa_opts.rs  syntax.rs  to_mir.rs  to_ssa.rs
ssa/src/ast_validation/: name_resolution.rs  validate_type_def.rs
ssa/src/ssa_opts/: copy_propagation.rs  jump.rs  remove_unused.rs  remove_unused_writes.rs
ssa/src/to_mir/: keywords.rs  name_resolver.rs
ssa/src/to_ssa/: keywords.rs  name_resolver.rs
ssa/tests/: mir.rs  ui.rs
ssa/tests/mir/: harness.rs
ssa/tests/mir/fail/: let_self.lisp
ssa/tests/mir/fail/parse/: let_self.mir
ssa/tests/mir/pass/: basic.lisp  block.lisp  complex_let.lisp  continue.lisp  if.lisp  loop.lisp  read_uninit.lisp  set_vars.lisp  while_loop.lisp
ssa/tests/mir/pass/if/: nested_if.lisp
ssa/tests/mir/pass/if/mir-opts/: if.mir  nested_if.mir  set_vars.mir
ssa/tests/mir/pass/if/parse/: if.mir  nested_if.mir  set_vars.mir
ssa/tests/mir/pass/if/ssa/: if.mir  nested_if.mir  set_vars.mir
ssa/tests/mir/pass/if/ssa-opts/: if.mir  nested_if.mir  set_vars.mir
ssa/tests/mir/pass/loop/: loop_break.lisp  while_loop.lisp
ssa/tests/mir/pass/loop/mir-opts/: continue.mir  loop.mir  loop_break.mir  while_loop.mir
ssa/tests/mir/pass/loop/parse/: continue.mir  loop.mir  loop_break.mir  while_loop.mir
ssa/tests/mir/pass/loop/ssa/: continue.mir  loop.mir  loop_break.mir  while_loop.mir
ssa/tests/mir/pass/loop/ssa-opts/: continue.mir  loop.mir  loop_break.mir  while_loop.mir
ssa/tests/mir/pass/mir-opts/: basic.mir  block.mir  continue.mir  if.mir  loop.mir  loop_break.mir  nested_if.mir  read_uninit.mir  set_vars.mir  while_loop.mir
ssa/tests/mir/pass/parse/: basic.mir  block.mir  complex_let.mir  continue.mir  if.mir  loop.mir  loop_break.mir  read_uninit.mir  set_vars.mir  while_loop.mir
ssa/tests/mir/pass/ssa/: block.mir  set_vars.mir
ssa/tests/mir/pass/ssa-opts/: block.mir  complex_let.mir  read_uninit.mir
ssa/tests/ui/parse/expr/: block.ssa  call.ssa  if.ssa  loop.ssa  loop_exit.ssa  new_type.ssa  test_literals.ssa  types.ssa  zero_bit_int.ssa
ssa/tests/ui/parse/expr/expected/: basic.ssa.expected  block.ssa.expected  call.ssa.expected  if.ssa.expected  loop.ssa.expected  loop_exit.ssa.expected  new_type.ssa.expected  test_literals.ssa.expected  types.ssa.expected  zero_bit_int.ssa.expected
