[workspace]

resolver = "2"

members = ["ssa"]

[workspace.dependencies]

istr = "0.1"
petgraph = "0.6"
slice-dst = "1"
erasable = "1.2"
ref-cast = "1"
bumpalo = "3"
yoke = { version = "0.7", features = ["derive"] }
stable_deref_trait = { version = "1" }
linkme = "0.3.25"
serde = { version = "1", features = ["derive"] }
serde_gura = "0.1.8"

[workspace.dependencies.smallvec]
version = "1"
features = ["union", "const_generics"]

[workspace.dependencies.logos]
git = "https://github.com/RustyYato/logos.git"
branch = "remove-unreachable-error"

[workspace.dependencies.test-harness]
# git = "https://github.com/RustyYato/test-harness.git"
# branch = "main"
path = "../test-harness/test-harness"
