[package]
name = "ssa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
colorz = { workspace = true }
eyre = { workspace = true }
colorz-eyre = { workspace = true }
istr = { workspace = true }
rustc-hash = { workspace = true }
hashbrown = { workspace = true }
petgraph = { workspace = true }
fixedbitset = { workspace = true }

[dev-dependencies]
walkdir = '2'
linkme = '0.3'
rayon = '1'
colorz = '1'
dissimilar = '1.0.7'

[[test]]
name = 'mir'
path = 'tests/mir.rs'
harness = false
