[package]
name = "ssa"
version = "0.1.0"
edition = "2021"

[dependencies]
istr.workspace = true
petgraph.workspace = true
slice-dst.workspace = true
erasable.workspace = true
ref-cast.workspace = true
bumpalo.workspace = true
yoke.workspace = true
stable_deref_trait.workspace = true
smallvec.workspace = true
logos.workspace = true
serde.workspace = true
bstr.workspace = true

[dev-dependencies]
test-harness.workspace = true
linkme.workspace = true
serde_gura.workspace = true

[[test]]
name = "ui"
harness = false
